--- a/templates/index.html
+++ b/templates/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
+
 <html lang="en" >
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Graduation Work</title>
-  <link rel="stylesheet" href="./static/bootstrap.min.css">
-  <link rel="stylesheet" href="./static/main.css">
+  <link rel="stylesheet" href="/static/bootstrap.min.css">
+  <link rel="stylesheet" href="/static/main.css">
 </head>
 <body class="" data-gr-c-s-loaded="true">
 
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-  <a class="navbar-brand" href="./index.html">Просто магазин</a>
-  <img src="./static/logo.svg" alt="" width="42" height="42">
+  <a class="navbar-brand" href="/index.html">Просто магазин</a>
+  <img src="/static/logo.svg" alt="" width="42" height="42">
   <button class="navbar-toggler" type="button" data-toggle="collapse"
           data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault"
           aria-expanded="false" aria-label="Toggle navigation">
@@ -33,7 +34,7 @@
           Гаджеты</a>
         <div class="dropdown-menu" aria-labelledby="dropdown01">
 
-          <a class="dropdown-item" href="./smartphones.html">
+          <a class="dropdown-item" href="/smartphones.html">
             Сматрфоны</a>
 
         </div>
@@ -41,19 +42,19 @@
 
 
       <li class="nav-item">
-        <a class="nav-link" href="./empty_section.html">
+        <a class="nav-link" href="/empty_section.html">
           Аксесcуары</a>
       </li>
 
 
     </ul>
     <a class="btn btn-outline-success my-2 my-sm-0" role="button"
-       href="./cart.html">
+       href="/cart.html">
       Корзина</a>
 
 
     <a class="btn btn-outline-success my-2 my-sm-0" role="button"
-       href="./login.html">
+       href="/login.html">
       Войти</a>
 
   </div>
@@ -77,9 +78,9 @@
       <div class="col-md-4">
         <h2>Nexus 5x</h2>
 
-        <a href="./phone.html">
+        <a href="/phone.html">
 
-          <img src="./static/nexus5x.webp" width="180">
+          <img src="/static/nexus5x.webp" width="180">
 
         </a>
 
@@ -91,9 +92,9 @@
       <div class="col-md-4">
         <h2>iPhone 7</h2>
 
-        <a href="./phone.html">
+        <a href="/phone.html">
 
-          <img src="./static/iphone7.webp" width="180">
+          <img src="/static/iphone7.webp" width="180">
 
         </a>
 
@@ -105,9 +106,9 @@
       <div class="col-md-4">
         <h2>Pixel 2</h2>
 
-        <a href="./phone.html">
+        <a href="/phone.html">
 
-          <img src="./static/pixel2.webp" width="180">
+          <img src="/static/pixel2.webp" width="180">
 
         </a>
 
@@ -134,9 +135,9 @@
       <div class="col-md-4">
         <h2>Фуфайка</h2>
 
-        <a href="./phone.html">
+        <a href="/phone.html">
 
-          <img src="./static/fufajka.jpg" width="180">
+          <img src="/static/fufajka.jpg" width="180">
 
         </a>
 
