--- a/templates/base.html
+++ b/templates/base.html
@@ -1,23 +1,57 @@
 <!DOCTYPE html>{% load static %}
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <title>{% block title %}{% endblock %}</title>
-      <!--Import Google Icon Font-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link type="text/css" rel="stylesheet" href="{% static "css/bootstrap.css" %}"  media="screen,projection"/>
-    <link type="text/css" rel="stylesheet" href="{% static "css/style.css" %}"  media="screen,projection"/>
 
-    <!--Let browser know website is optimized for mobile-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  </head>
+<html lang="en" >
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>Graduation Work</title>
+  <link rel="stylesheet" href="/static/bootstrap.min.css">
+  <link rel="stylesheet" href="/static/main.css">
+</head>
+<body class="" data-gr-c-s-loaded="true">
 
-  <body>
-  <div>
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+  <a class="navbar-brand" href="{{ home }}">Просто магазин</a>
+  <img src="/static/logo.svg" alt="" width="42" height="42">
+  <button class="navbar-toggler" type="button" data-toggle="collapse"
+          data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault"
+          aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-    {% block content %}{% endblock %}
+  <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="{{ 'home' }}">Главная</a>
+      </li>
+
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="dropdown01"
+           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Гаджеты</a>
+        <div class="dropdown-menu" aria-labelledby="dropdown01">
+          <a class="dropdown-item" href="/smartphones.html">Сматрфоны</a>
+        </div>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link" href="/empty_section.html">Аксесcуары</a>
+      </li>
+    </ul>
+
+    <a class="btn btn-outline-success my-2 my-sm-0" role="button" href="{{ 'cart' }}">Корзина</a>
+    <a class="btn btn-outline-success my-2 my-sm-0" role="button" href="{{ 'login' }}"> Войти</a>
   </div>
-    <!--JavaScript at end of body for optimized loading-->
-    <script type="text/javascript" src="{% static "js/bootstrap.js" %}"></script>
-  </body>
+</nav>
+
+{% block content %}{% endblock %}
+
+<!--JavaScript at end of body for optimized loading-->
+<script type="text/javascript" src="{% static "js/bootstrap.js" %}"></script>
+</body>
+ <hr>
+<footer class="container">
+  <p>© Просто магазин 2018</p>
+</footer>
 </html>
+
+
