--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>{% load static %}
+<!DOCTYPE html>
+{% load static %}
 
 <html lang="en" >
 <head>
@@ -11,7 +12,7 @@
 <body class="" data-gr-c-s-loaded="true">
 
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-  <a class="navbar-brand" href="{{ home }}">Просто магазин</a>
+  <a class="navbar-brand" href="{% url 'index' %}">Просто магазин</a>
   <img src="/static/logo.svg" alt="" width="42" height="42">
   <button class="navbar-toggler" type="button" data-toggle="collapse"
           data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault"
@@ -22,7 +23,7 @@
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="{{ 'home' }}">Главная</a>
+        <a class="nav-link" href="{% url 'index' %}">Главная</a>
       </li>
 
       <li class="nav-item dropdown">
@@ -38,8 +39,8 @@
       </li>
     </ul>
 
-    <a class="btn btn-outline-success my-2 my-sm-0" role="button" href="{{ 'cart' }}">Корзина</a>
-    <a class="btn btn-outline-success my-2 my-sm-0" role="button" href="{{ 'login' }}"> Войти</a>
+    <a class="btn btn-outline-success my-2 my-sm-0" role="button" href="{% url 'cart' %}">Корзина</a>
+    <a class="btn btn-outline-success my-2 my-sm-0" role="button" href="{% url 'login' %}"> Войти</a>
   </div>
 </nav>
 
