--- a/templates/index.html
+++ b/templates/index.html
@@ -14,58 +14,16 @@
   <div class="container mb-5">
     <!-- Example row of columns -->
     <div class="row">
-
+      {% for product in products %}
       <div class="col-md-4">
-        {% for product in products %}
-          {{ product.title }}
-          {{ product.image }}
-          <picture>
-            <source srcset="/static/nexus5x_1E3F9Vc.webp" type="image/webp">
-            <img src="img.jpg" width="180">
-          </picture>
-          <img src="{{ product.image }}" width="180">
-        {% endfor %}
-        <h2>Nexus 5x</h2>
-
-        <a href="/phone">
-
-          <img src="/static/nexus5x.webp" width="180">
-
-        </a>
-
+        <h2>{{ product.title }}</h2>
+        <a href="{{ product.get_absolute_url }}"><img src="/{{ product.image }}" width="180"></a>
+        <p><strong>{{ product.price }} руб.</strong></p>
         <form>
           <input type="submit" class="btn btn-secondary" value="Добавить в корзину »">
         </form>
       </div>
-
-      <div class="col-md-4">
-        <h2>iPhone 7</h2>
-
-        <a href="/phone.html">
-
-          <img src="/static/iphone7.webp" width="180">
-
-        </a>
-
-        <form>
-          <input type="submit" class="btn btn-secondary" value="Добавить в корзину »">
-        </form>
-      </div>
-
-      <div class="col-md-4">
-        <h2>Pixel 2</h2>
-
-        <a href="/phone.html">
-
-          <img src="/static/pixel2.webp" width="180">
-
-        </a>
-
-        <form>
-          <input type="submit" class="btn btn-secondary" value="Добавить в корзину »">
-        </form>
-      </div>
-
+      {% endfor %}
     </div>
   </div> <!-- /container -->
 
