--- a/templates/phone.html
+++ b/templates/phone.html
@@ -4,13 +4,17 @@
 <main role="main">
   <div class="container mt-3">
     <!-- Example row of columns -->
+    <h2><a href="{{ product.category.get_absolute_url }}">{{ product.category }}</a></h2>
     <div class="row">
       <div class="col-md-12">
-        <h2>Nexus 5x</h2>
+        <h2>{{ product.title }}</h2>
 
-        <img src="/static/nexus5x.webp" width="120">
+        <img src="/{% if product.image %}{{ product.image.url }}{% endif %}" width="120">
 
-        <p>Неплохой телефон</p>
+        <p>{{ product.description | linebreaks}}</p>
+        <p class="price">
+        {{ product.price }} руб.
+      </p>
         <form method="post" action="./cart/">
           <input type="hidden" name="csrfmiddlewaretoken"
                  value="N4vcBqzjoYkU7OTDuAT8hq8srpvYX44nJsswuP7e3EYg0Hq8DgxuR0eiXWbSr5RZ">
@@ -86,9 +90,6 @@
         </form>
       </div>
     </div>
-
   </div> <!-- /container -->
-
-
 </main>
 {% endblock %}
