--- a/templates/cart.html
+++ b/templates/cart.html
@@ -1,4 +1,51 @@
 <!DOCTYPE html>
+{% extends 'base.html' %}
+{% load static %}
+{% block title %}
+  Ваша корзина товаров
+{% endblock %}
+{% block content %}
+  <h1>Ваша корзина товаров</h1>
+  <table class="cart">
+    <thead>
+      <tr>
+        <th>Изображение</th>
+        <th>Продукт</th>
+        <th>Количество</th>
+        <th>Удалить</th>
+        <th>Полная цена</th>
+        <th>Цена</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for item in cart %}
+        {% with product=item.product %}
+          <tr>
+            <td>
+              <a href="{{ product.get_absolute_url }}">
+                <img src="{{ product.image.url }}" alt="" />
+              </a>
+            </td>
+            <td>{{ product.title }}</td>
+            <td>{{ item.quantity }}</td>
+            <td><a href="{% url "cart_remove" product.id %}">Удалить</a></td>
+            <td class="num">{{ item.price }} руб.</td>
+            <td class="num">{{ item.total_price }} руб.</td>
+          </tr>
+        {% endwith %}
+      {% endfor %}
+        <tr class="total">
+          <td>Total</td>
+          <td colspan="4"></td>
+          <td class="num">{{ cart.get_sum_cart }} руб.</td>
+        </tr>
+    </tbody>
+  </table>
+  <p class="text-right">
+    <a href="#">Оформить заказ</a>
+  </p>
+
+<hr>
 <html lang="en" >
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -10,58 +57,7 @@
 </head>
 <body class="" data-gr-c-s-loaded="true">
 
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-  <a class="navbar-brand" href="./index.html">Просто магазин</a>
-  <img src="./static/logo.svg" alt="" width="42" height="42">
-  <button class="navbar-toggler" type="button" data-toggle="collapse"
-          data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault"
-          aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="./index.html">
-          Главная</a>
-      </li>
-
-
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="dropdown01"
-           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Гаджеты</a>
-        <div class="dropdown-menu" aria-labelledby="dropdown01">
-
-          <a class="dropdown-item" href="./smartphones.html">
-            Сматрфоны</a>
-
-        </div>
-      </li>
-
-
-      <li class="nav-item">
-        <a class="nav-link" href="./empty_section.html">
-          Аксесcуары</a>
-      </li>
-
-
-    </ul>
-    <a class="btn btn-outline-success my-2 my-sm-0 active" role="button"
-       href="./cart.html">
-      Корзина</a>
-
-
-    <a class="btn btn-outline-success my-2 my-sm-0" role="button"
-       href="./login.html">
-      Войти</a>
-
-  </div>
-</nav>
-
-
 <div class="container mt-3">
-
   <div class="row">
     <div class="col-lg-6 col-md-9 col-sm-12 order-md-2 mb-4">
       <h4 class="d-flex justify-content-between align-items-center mb-3">
@@ -103,7 +99,7 @@
   </div>
 
 </div>
-
+{% endblock %}
 <script src="./static/jquery-3.3.1.slim.min.js"></script>
 <script src="./static/popper.min.js"></script>
 <script src="./static/bootstrap.min.js"></script>
