--- a/templates/cart.html
+++ b/templates/cart.html
@@ -5,45 +5,12 @@
   Ваша корзина товаров
 {% endblock %}
 {% block content %}
-  <h1>Ваша корзина товаров</h1>
-  <table class="cart">
-    <thead>
-      <tr>
-        <th>Изображение</th>
-        <th>Продукт</th>
-        <th>Количество</th>
-        <th>Удалить</th>
-        <th>Полная цена</th>
-        <th>Цена</th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for item in cart %}
-        {% with product=item.product %}
-          <tr>
-            <td>
-              <a href="{{ product.get_absolute_url }}">
-                <img src="{{ product.image.url }}" alt="" />
-              </a>
-            </td>
-            <td>{{ product.title }}</td>
-            <td>{{ item.quantity }}</td>
-            <td><a href="{% url "cart_remove" product.id %}">Удалить</a></td>
-            <td class="num">{{ item.price }} руб.</td>
-            <td class="num">{{ item.total_price }} руб.</td>
-          </tr>
-        {% endwith %}
-      {% endfor %}
-        <tr class="total">
-          <td>Total</td>
-          <td colspan="4"></td>
-          <td class="num">{{ cart.get_sum_cart }} руб.</td>
-        </tr>
-    </tbody>
-  </table>
-  <p class="text-right">
-    <a href="#">Оформить заказ</a>
-  </p>
+
+
+
+
+
+
 
 <hr>
 <html lang="en" >
@@ -59,39 +26,30 @@
 
 <div class="container mt-3">
   <div class="row">
-    <div class="col-lg-6 col-md-9 col-sm-12 order-md-2 mb-4">
+    <div class="col-lg-12 col-md-9 col-sm-12 order-md-2 mb-4">
       <h4 class="d-flex justify-content-between align-items-center mb-3">
         <span class="text-muted">Ваша корзина</span>
-        <span class="badge badge-secondary badge-pill">3</span>
+        <span class="badge badge-secondary badge-pill">{{ cart.get_sum_quantity }}</span>
       </h4>
+      {% for item in cart %}
+      {% with product=item.product %}
       <ul class="list-group mb-3">
-
         <li class="list-group-item d-flex justify-content-between lh-condensed">
           <div>
-            <h6 class="my-0">Nexus 5x</h6>
-            <small class="text-muted">Неплохой телефон</small>
+            <!--              <a href="{{ product.get_absolute_url }}">-->
+            <!--                <img src="/{{ product.image.url }}" alt="" width="90"/>-->
+            <!--              </a>-->
+            <a href="{{ product.get_absolute_url }}"><h6 class="my-0">{{ product.title }}</h6></a>
+            <div class="text-muted mb-3">Цена: {{ item.price }} (Сумма: {{ item.total_price }})</div>
+            <small class="text-muted">{{ product.description }}</small>
           </div>
-          <span class="text-muted">4</span>
+          <span class="text-muted">{{ item.quantity }} шт.</span>
+          <a href="{% url "cart_remove" product.id %}">Удалить</a>
         </li>
-
-        <li class="list-group-item d-flex justify-content-between lh-condensed">
-          <div>
-            <h6 class="my-0">iPhone 7</h6>
-            <small class="text-muted">Телефон с яблоком</small>
-          </div>
-          <span class="text-muted">1</span>
-        </li>
-
-        <li class="list-group-item d-flex justify-content-between lh-condensed">
-          <div>
-            <h6 class="my-0">Pixel 2</h6>
-            <small class="text-muted">Классная камера</small>
-          </div>
-          <span class="text-muted">1</span>
-        </li>
-
       </ul>
-
+      {% endwith %}
+      {% endfor %}
+      <div align="right" class="text-muted mb-3">Итого : {{ cart.get_sum_cart }}</div>
       <form class="card p-2">
         <button type="submit" class="btn btn-secondary">Заказать</button>
       </form>
