--- a/templates/index.html
+++ b/templates/index.html
@@ -19,8 +19,10 @@
         <h2>{{ product.title }}</h2>
         <a href="{{ product.get_absolute_url }}"><img src="/{{ product.image }}" width="180"></a>
         <p><strong>{{ product.price }} руб.</strong></p>
-        <form>
-          <input type="submit" class="btn btn-secondary" value="Добавить в корзину »">
+        <form method="post" action="{% url "cart_add" product.id %}">
+          {{ cart_product_form }}
+          {% csrf_token %}
+          <p><input type="submit" class="btn btn-secondary" value="Добавить в корзину"></p>
         </form>
       </div>
       {% endfor %}
