--- a/templates/index.html
+++ b/templates/index.html
@@ -10,9 +10,7 @@
     </div>
   </div>
 
-
   <div class="container mb-5">
-    <!-- Example row of columns -->
     <div class="row">
       {% for product in products %}
       <div class="col-md-4">
@@ -27,7 +25,7 @@
       </div>
       {% endfor %}
     </div>
-  </div> <!-- /container -->
+  </div>
 
   <div class="jumbotron">
     <div class="container">
@@ -38,7 +36,6 @@
 
   <h3> Статьи: </h3>
   <div class="container mb-5">
-    <!-- Example row of columns -->
     <div class="row">
 
       <div class="col-md-4">
@@ -56,7 +53,7 @@
       </div>
 
     </div>
-  </div> <!-- /container -->
+  </div>
 
 </main>
 {% endblock %}
