--- a/templates/phone.html
+++ b/templates/phone.html
@@ -13,7 +13,7 @@
         <p>{{ product.description | linebreaks}}</p>
         <p><strong>{{ product.price }}</strong> руб.</p>
 
-        <form method="post" action="{% url "cart_add" product.id %}">
+        <form method="post" action="{% url "cart:cart_add" product.id %}">
           {{ cart_product_form }}
           {% csrf_token %}
           <input type="submit" class="btn btn-secondary" value="Добавить в корзину">
