--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 {% load static %}
 {% load customfilter %}
+{% load mptt_tags %}
 
 <html lang="en" >
 <head>
@@ -13,7 +14,7 @@
 <body class="" data-gr-c-s-loaded="true">
 
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-  <a class="navbar-brand" href="{% url 'index' %}">Просто магазин</a>
+  <a class="navbar-brand" href="{% url 'coresite:product_list' %}">Просто магазин</a>
   <img src="/static/logo.svg" alt="" width="42" height="42">
   <button class="navbar-toggler" type="button" data-toggle="collapse"
           data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault"
@@ -24,33 +25,45 @@
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="{% url 'index' %}">Главная</a>
+        <a class="nav-link" href="{% url 'coresite:product_list' %}">Главная</a>
       </li>
 
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="dropdown01"
            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Гаджеты</a>
         <div class="dropdown-menu" aria-labelledby="dropdown01">
-          <a class="dropdown-item" href="/smartphones.html">Сматрфоны</a>
+          <a class="dropdown-item" href="{% url "coresite:product_list" %}">Все категории</a>
+<!--          {% for c in categories %}-->
+<!--            <a class="dropdown-item" href="{{ c.get_absolute_url }}">{{ c.name }}</a>-->
+<!--          {% endfor %}-->
+          <ul>
+            {% recursetree categories %}
+              <li>
+                <a class="dropdown-item" href="{{ node.get_absolute_url }}">{{ node.name }}</a>
+                {% if not node.is_leaf_node %}
+                <ul class="children">
+                  {{ children }}
+                </ul>
+                {% endif %}
+              </li>
+            {% endrecursetree %}
+          </ul>
         </div>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="/empty_section.html">Аксесcуары</a>
+        <a class="nav-link" href="{% url 'coresite:test_view' %}">Аксесcуары(тест)</a>
       </li>
     </ul>
 
-    <a class="btn btn-outline-success my-2 my-sm-0" role="button" href="{% url 'cart' %}">Корзина:
+    <a class="btn btn-outline-success my-2 my-sm-0" role="button" href="{% url 'cart:cart' %}">Корзина:
 
       {% with total_items=cart|length %}
         {% if cart|length > 0 %}
-
-
-        {{ total_items }} {{ total_items|pluralize:"товар,товара,товаров" }} на сумму:
-        {{ cart.get_sum_cart }} руб.
-
+          {{ total_items }} {{ total_items|pluralize:"товар,товара,товаров" }} на сумму:
+          {{ cart.get_sum_cart }} руб.
         {% else %}
-        пусто.
+          пусто.
         {% endif %}
       {% endwith %}
     </a>
@@ -59,14 +72,50 @@
 </nav>
 
 {% block content %}{% endblock %}
+{% block pagination %}
+  {% if is_paginated %}
+
+<nav aria-label="Page navigation example">
+  <ul class="pagination">
+    {% if page_obj.has_previous %}
+    <li class="page-item">
+      <a class="page-link" href="{{ request.path }}?page={{ page_obj.previous_page_number }}" aria-label="Previous">
+        <span aria-hidden="true">&laquo;</span>
+        <span class="sr-only">Previous</span>
+      </a>
+    </li>
+    {% endif %}
+    <li class="page-item"><a class="page-link" href="#">
+      Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+    </a></li>
+    {% if page_obj.has_next %}
+    <li class="page-item">
+      <a class="page-link" href="{{ request.path }}?page={{ page_obj.next_page_number }}" aria-label="Next">
+        <span aria-hidden="true">&raquo;</span>
+        <span class="sr-only">Next</span>
+      </a>
+    </li>
+    {% endif %}
+  </ul>
+</nav>
+  {% endif %}
+{% endblock %}
+
+{% block article %}
+{% endblock %}
 
 <!--JavaScript at end of body for optimized loading-->
 <script type="text/javascript" src="{% static "js/bootstrap.js" %}"></script>
-</body>
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
  <hr>
 <footer class="container">
   <p>© Просто магазин 2018</p>
 </footer>
+
+</body>
 </html>
 
 
