--- a/templates/created.html
+++ b/templates/created.html
@@ -5,4 +5,5 @@
 {% block content %}
     <h1>Спасибо за заказ</h1>
     <p>Заказ успешно создан. Номер вашего заказа - <strong>{{ order.id }}</strong>.</p>
+    <a href="{% url 'coresite:product_list' %}">Вернутся на главную страницу</a>
 {% endblock %}
