--- a/templates/index.html
+++ b/templates/index.html
@@ -34,11 +34,15 @@
         <h2>{{ product.title }}</h2>
         <a href="{{ product.get_absolute_url }}"><img src="/{{ product.image }}" width="180"></a>
         <p><strong>{{ product.price }} руб.</strong></p>
+<!--        <p>создан {{ product.created_item }}</p>-->
+<!--        <p>изменен {{ product.updated_item }}</p>-->
+        <div class="btn-group">
         <form method="post" action="{% url "cart:cart_add" product.id %}">
           {{ cart_product_form }}
           {% csrf_token %}
           <p><input type="submit" class="btn btn-secondary" value="Добавить в корзину"></p>
         </form>
+        </div>
       </div>
       {% endfor %}
     </div>
