--- a/templates/logout.html
+++ b/templates/logout.html
@@ -9,7 +9,7 @@
         <h2>logout</h2>
         <p>Приходите еще!</p>
 
-        <a href="{% url 'login'%}">Авторизация</a><br>
-        <a href="{% url 'home'%}">Вернуться на главную</a>
+        <a href="{% url 'login' %}">Авторизация</a><br>
+        <a href="{% url 'coresite:product_list' %}">Вернуться на главную</a>
     </div>
 {% endblock %}
