--- a/templates/base.html
+++ b/templates/base.html
@@ -33,9 +33,7 @@
            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Гаджеты</a>
         <div class="dropdown-menu" aria-labelledby="dropdown01">
           <a class="dropdown-item" href="{% url "coresite:product_list" %}">Все категории</a>
-<!--          {% for c in categories %}-->
-<!--            <a class="dropdown-item" href="{{ c.get_absolute_url }}">{{ c.name }}</a>-->
-<!--          {% endfor %}-->
+
           <ul>
             {% recursetree categories %}
               <li>
@@ -55,19 +53,22 @@
         <a class="nav-link" href="{% url 'coresite:test_view' %}">Аксесcуары(тест)</a>
       </li>
     </ul>
+        <a class="btn btn-outline-success my-2 my-sm-0 mr-2" role="button" href="{% url 'cart:cart' %}">Корзина:
 
-    <a class="btn btn-outline-success my-2 my-sm-0" role="button" href="{% url 'cart:cart' %}">Корзина:
-
-      {% with total_items=cart|length %}
-        {% if cart|length > 0 %}
-          {{ total_items }} {{ total_items|pluralize:"товар,товара,товаров" }} на сумму:
-          {{ cart.get_sum_cart }} руб.
-        {% else %}
-          пусто.
-        {% endif %}
-      {% endwith %}
-    </a>
-    <a class="btn btn-outline-success my-2 my-sm-0" role="button" href="{% url 'login' %}"> Войти</a>
+          {% with total_items=cart|length %}
+            {% if cart|length > 0 %}
+              {{ total_items }} {{ total_items|pluralize:"товар,товара,товаров" }} на сумму:
+              {{ cart.get_sum_cart }} руб.
+            {% else %}
+              пусто.
+            {% endif %}
+          {% endwith %}
+        </a>
+    {% if user.is_authenticated %}
+      <a class="btn btn-outline-success my-2 my-sm-0" role="button" href="{% url 'logout'%}?next={{request.path}}">{{ user.get_username }} ( Выйти )</a>
+    {% else %}
+      <a class="btn btn-outline-success my-2 my-sm-0" role="button" href="{% url 'login' %}">Войти</a>
+    {% endif %}
   </div>
 </nav>
 
